Correcting grid-layout and adding Billy.
Cards were overlapping as minwidth was smaller than card size.

--- a/src/styles/skane-stags-global-styles.css
+++ b/src/styles/skane-stags-global-styles.css
@@ -58,7 +58,7 @@ img.poster {
 
 .playerCardsContainer {
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 	grid-gap: 1em;
 	padding-top: 1em;
 }
